--- a/client/index.css
+++ b/client/index.css
@@ -132,7 +132,6 @@ body {
 
   color: #2c2c2c; /* Charcoal Black Text */
   font-family: "myFont", serif; /* Classy serif font */
-  line-height: 1.2;
 }
 
 h1,
